--- a/java2/style.scss
+++ b/java2/style.scss
@@ -1,36 +1,24 @@
-@use './scss/components/footer';
+@use "./scss/partials/header";
+@use "./scss/partials/footer";
+@use "./scss/partials/broilerplate";
+@use "./scss/partials/container";
+@use "./scss/partials/abstracts/colours" as c;
+@use "./scss/partials/brakebpoints/mediaQueries";
 
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
+.main__content {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-  background-color: blue;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5em;
+}
+
+.main__content--box {
+  border: 1px solid black;
+  width: 25em;
+  height: 5em;
+  margin: 0.75em;
+  text-align: center;
+  box-shadow: 0 4px 8px -4px lightblue;
+  background-color: c.primaryColour(mint);
 }
