--- a/java2/style.scss
+++ b/java2/style.scss
@@ -5,20 +5,28 @@
 @use "./scss/partials/abstracts/colours" as c;
 @use "./scss/partials/brakebpoints/mediaQueries";
 
+.main {
+  width: 100%;
+}
+
 .main__content {
   display: flex;
+  max-width: 900px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 5em;
+  margin: 0 auto;
 }
 
 .main__content--box {
+  width: 100%;
+  padding: 0.5em;
   border: 1px solid black;
-  width: 25em;
-  height: 5em;
-  margin: 0.75em;
   text-align: center;
   box-shadow: 0 4px 8px -4px lightblue;
   background-color: c.primaryColour(mint);
+}
+
+.main__content--text {
+  width: 75ch;
 }
