--- a/java2/style.scss
+++ b/java2/style.scss
@@ -15,18 +15,22 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 0 auto;
+  padding: 2em;
+  margin: 8em auto;
 }
 
 .main__content--box {
   width: 100%;
+  height: 5em;
+  overflow: hidden;
   padding: 0.5em;
   border: 1px solid black;
-  text-align: center;
+  justify-content: center;
   box-shadow: 0 4px 8px -4px lightblue;
   background-color: c.primaryColour(mint);
 }
 
 .main__content--text {
-  width: 75ch;
+  width: 100%;
+  padding: 0.5em;
 }
