--- a/java2/scss/partials/_broilerplate.scss
+++ b/java2/scss/partials/_broilerplate.scss
@@ -16,5 +16,5 @@ body {
   font-family: verdana, arial, helvetica;
   margin: 0 auto;
   padding: 0;
-  background-color: c.primaryColour(primary);
+  background-color: c.secondaryColour(primary);
 }
