--- a/java2/style.scss
+++ b/java2/style.scss
@@ -11,8 +11,7 @@
 
 .main__content {
   display: flex;
-  max-width: 900px;
-  flex-direction: column;
+  flex-flow: row wrap;
   justify-content: center;
   align-items: center;
   padding: 2em;
@@ -20,17 +19,26 @@
 }
 
 .main__content--box {
-  width: 100%;
-  height: 5em;
+  display: flex;
+  flex-direction: column;
+  flex: 0 1 20rem;
+  min-height: 10em;
   overflow: hidden;
+  margin: 16px;
   padding: 0.5em;
-  border: 1px solid black;
-  justify-content: center;
-  box-shadow: 0 4px 8px -4px lightblue;
-  background-color: c.primaryColour(mint);
+  box-shadow: 0 8px 16px -4px white;
+  background-color: c.secondaryColour(accent);
+  border-radius: 8px;
 }
 
 .main__content--text {
+  color: white;
   width: 100%;
   padding: 0.5em;
+}
+
+.btn {
+  flex: 0 1 3em;
+  color: blue;
+  align-items: center;
 }
