--- a/java2/style.scss
+++ b/java2/style.scss
@@ -8,7 +8,7 @@
 .main {
   width: 100%;
 }
-
+// TODO evalute if you should move main__content
 .main__content {
   display: flex;
   flex-flow: row wrap;
@@ -21,13 +21,15 @@
 .main__content--box {
   display: flex;
   flex-direction: column;
-  flex: 0 1 20rem;
+  flex: 0 1 20em;
+  justify-content: space-between;
   min-height: 10em;
   overflow: hidden;
   margin: 16px;
   padding: 0.5em;
-  box-shadow: 0 8px 16px -4px white;
-  background-color: c.secondaryColour(accent);
+  box-shadow: 0 8px 8px -4px white;
+  background-color: c.colourfull(accent);
+  border-bottom: 1px solid c.colourfull(primary);
   border-radius: 8px;
 }
 
@@ -38,7 +40,7 @@
 }
 
 .btn {
+  justify-self: baseline;
   flex: 0 1 3em;
   color: blue;
-  align-items: center;
 }
