--- a/java2/scss/partials/_index.scss
+++ b/java2/scss/partials/_index.scss
@@ -2,6 +2,6 @@
 @forward "../partials/header";
 @forward "../partials/footer";
 @forward "../partials/container";
-
+@forward "../partials/logIn";
 @forward "../partials/abstracts/colours";
 @forward "../partials/abstracts/typography";
