buildng posts.html

--- a/java2/scss/partials/_index.scss
+++ b/java2/scss/partials/_index.scss
@@ -5,3 +5,4 @@
 @forward "../partials/logIn";
 @forward "../partials/abstracts/colours";
 @forward "../partials/abstracts/typography";
+@forward "../posts.scss";
