--- a/java2/scss/partials/_posts.scss
+++ b/java2/scss/partials/_posts.scss
@@ -1,6 +1,13 @@
+.grid__container {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 3em;
+  margin-top: 5em;
+}
 
 .post__container {
-  width: 300px;
-  height: 400px;
-  border: 50px solid white;
+  width: 500px;
+  height: 200px;
+  border: 1px solid white;
+  margin: 0 auto;
 }
