--- a/java2/scss/partials/_posts.scss
+++ b/java2/scss/partials/_posts.scss
@@ -1,3 +1,9 @@
+body{
+  background-image: url("upload/background/dark-honeycomb.png");
+  background-size: 10%;
+
+}
+
 .grid__container {
   display: grid;
   grid-template-columns: 1fr;
@@ -6,20 +12,22 @@
 }
 
 .post__container {
-  width: 100%;
+  width: 35em;
   height: 200px;
   border: 1px solid white;
   margin: 0 auto;
-  justify-items: center;
+  padding: 0.5em;
 }
 
 .post__container--box {
-  margin: 0;
+  min-width: 100%;
+
 }
 
-.by {
+/* .by {
   margin: 0;
 }
 .text {
   width: 45ch;
 }
+ */
