--- a/java2/scss/partials/_index.scss
+++ b/java2/scss/partials/_index.scss
@@ -6,3 +6,4 @@
 @forward "../partials/abstracts/colours";
 @forward "../partials/abstracts/typography";
 @forward "../posts.scss";
+@forward "../partials/landingPage";
