--- a/java2/scss/style.scss
+++ b/java2/scss/style.scss
@@ -4,7 +4,9 @@
 @use "./partials/container";
 @use "./partials/abstracts/colours" as c;
 @use "./partials/brakepoints/mediaQueries";
-@use "./partials/landingPage";
+@use "./landingPage";
+@use "./login";
+@use "./posts";
 
 .main {
   width: 100%;
