landing page ish done

--- a/java2/scss/_landingPage.scss
+++ b/java2/scss/_landingPage.scss
@@ -1,10 +1,12 @@
 @use "./partials/brakepoints/index" as breakePoints;
 @use "./partials/abstracts/colours" as c;
+
 .container__landingPage {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   flex-direction: column;
-  @include breakePoints.mq(medium) {
+  @include breakePoints.min_width(medium) {
     flex-direction: row;
   }
   max-width: 500px;
@@ -18,7 +20,7 @@
   align-items: center;
   border: 2px solid c.colourfull(june_bud);
   height: 15em;
-  @include breakePoints.mq(medium) {
+  @include breakePoints.min_width(medium) {
     flex: 1 0 auto;
   }
 }
@@ -27,6 +29,17 @@
   color: c.colourfull(primary);
 }
 
-.text{
-    color: c.colourfull(accent);
+.text {
+  color: c.colourfull(accent);
+}
+
+.headline_container {
+  max-width: 500px;
+  margin: auto;
+  margin-top: 10em;
+}
+
+.headline {
+  color: c.colourfull(primary);
+  font-size: 3rem;
 }
