--- a/java2/scss/_posts.scss
+++ b/java2/scss/_posts.scss
@@ -1,6 +1,5 @@
 .grid__container {
     display: grid;
-    grid-template-columns: 1fr;
     gap: 3em;
     margin-top: 5em;
   }
@@ -17,6 +16,9 @@
     min-width: 100%;
   }
   
+  .text{
+    color: white;
+  }
   /* .by {
     margin: 0;
   }
