--- a/java2/scss/_posts.scss
+++ b/java2/scss/_posts.scss
@@ -1,29 +1,36 @@
+@use "./partials/abstracts/colours" as c;
+
 .grid__container {
-    display: grid;
-    gap: 3em;
-    margin-top: 5em;
-  }
-  
-  .post__container {
-    width: 35em;
-    height: 200px;
-    border: 1px solid white;
-    margin: 0 auto;
-    padding: 0.5em;
-  }
-  
-  .post__container--box {
-    min-width: 100%;
-  }
-  
-  .text{
-    color: white;
-  }
-  /* .by {
+  display: grid;
+  gap: 3em;
+  margin-top: 5em;
+}
+
+.post__container {
+  width: 50em;
+  height: 200px;
+  border: 1px solid white;
+  margin: 0 auto;
+  padding: 0.5em;
+}
+
+.post__container--box {
+  min-width: 100%;
+}
+
+.post_headline{
+  color: c.colourfull(june_bud)
+}
+.post__author {
+  color: c.colourfull(primary);
+}
+.text {
+  color: white;
+}
+/* .by {
     margin: 0;
   }
   .text {
     width: 45ch;
   }
    */
-  
