--- a/java2/scss/_posts.scss
+++ b/java2/scss/_posts.scss
@@ -18,8 +18,8 @@
   min-width: 100%;
 }
 
-.post_headline{
-  color: c.colourfull(june_bud)
+.post_headline {
+  color: c.colourfull(june_bud);
 }
 .post__author {
   color: c.colourfull(primary);
