--- a/java2/scss/partials/_broilerplate.scss
+++ b/java2/scss/partials/_broilerplate.scss
@@ -34,19 +34,18 @@ h2 {
   color: c.colourfull(accent);
 }
 
-// a:link {
-//   text-decoration: none;
-//   color: c.colourfull(accent);
-// }
+a:link {
+  text-decoration: none;
+}
 
-// a:visited {
-//   text-decoration: none;
-// }
+a:visited {
+  text-decoration: none;
+}
 
-// a:hover {
-//   text-decoration: underline;
-// }
+a:hover {
+  text-decoration: none;
+}
 
-// a:active {
-//   text-decoration: underline;
-// }
+a:active {
+  text-decoration: underline;
+}
