--- a/java2/scss/_posts.scss
+++ b/java2/scss/_posts.scss
@@ -1,14 +1,20 @@
 @use "./partials/abstracts/colours" as c;
 @use "./partials/broilerplate";
+@use "./partials/brakepoints/mediaQueries" as breakePoints;
 
 .postMain {
   padding: 2em;
 }
 .postContainer {
+  @include breakePoints.min_width(medium) {
+    grid-template-columns: 1fr 1fr;
+  }
+  @include breakePoints.max_width(small) {
+    grid-template-columns: 1fr;
+  }
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  // grid-template-rows: 1fr;
-  max-width: 800px;
+  max-width: 1200px;
   padding: 2em;
   margin: 8em auto;
   box-shadow: 0 8px 19px -8px c.colourfull(primary);
