--- a/java2/scss/_posts.scss
+++ b/java2/scss/_posts.scss
@@ -13,7 +13,6 @@
     grid-template-columns: 1fr;
   }
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
   max-width: 1200px;
   padding: 2em;
   margin: 8em auto;
@@ -46,6 +45,7 @@
   display: flex;
   .flex--1 {
     flex: 1;
+    width: auto;
     padding: 0.5em;
     justify-content: center;
     background-color: c.lavender(steel);
