removed console.log

--- a/java2/scss/_landingPage.scss
+++ b/java2/scss/_landingPage.scss
@@ -1,5 +1,6 @@
 @use "./partials/brakepoints/index" as breakePoints;
 @use "./partials/abstracts/colours" as c;
+@use "./partials/broilerplate";
 
 .container__landingPage {
   display: flex;
