--- a/java2/scss/_posts.scss
+++ b/java2/scss/_posts.scss
@@ -56,7 +56,8 @@
 }
 
 .postContainer--title {
-  color: c.colourfull(accent);
+  margin: 0;
+  color: c.secondaryColour(accent);
   font-size: clamp(1.5rem, 3vw, 3rem);
 }
 
@@ -90,6 +91,10 @@
 .flex-col {
   flex-direction: row;
 }
-.form-text{
+.form-text {
   color: c.secondaryColour(accent);
+}
+
+.postNotification{
+  color: c.colourfull(primary);
 }
