some more style changes

--- a/java2/scss/partials/_header.scss
+++ b/java2/scss/partials/_header.scss
@@ -18,6 +18,10 @@
   padding: 1em;
 }
 
+#logout-btn{
+  background-color: c.lavender(steel);
+}
+
 .menu {
   display: flex;
   flex-direction: row;
