--- a/java2/scss/_createPost.scss
+++ b/java2/scss/_createPost.scss
@@ -15,7 +15,6 @@
     color: white;
   }
 }
-
 .hidden {
   display: none;
 }
@@ -26,8 +25,9 @@
 }
 
 .postTextArea {
-  display: block;
-  padding: 2em;
+  display: flex;
+  flex: 1;
+  padding: 1em;
   border-radius: 8px;
   width: 100%;
 }
