--- a/java2/scss/_createPost.scss
+++ b/java2/scss/_createPost.scss
@@ -8,7 +8,9 @@
   text-align: center;
   width: 500px;
 }
-
+.create_post-h1 {
+  color: c.lavender(viridian);
+}
 .postTitle {
   color: c.lavender(viridian);
   .postTitleInput {
