--- a/java2/scss/_posts.scss
+++ b/java2/scss/_posts.scss
@@ -23,7 +23,7 @@
 .PostContainer--headline {
   font-weight: 600;
   & .headline--text {
-    color: c.colourfull(accent);
+    color: c.lavender(steel);
   }
 }
 
